frontend/core/src/main/webapp/static/less/components.less
/* ... */
.feature-footer {
  li.left-slide-link {
    a {
      padding-right: @horizontal-grid - 10px; // make room for long names
    }
  }
  li.right-slide-link {
    a {
      padding-left: @horizontal-grid - 10px; // make room for long names
    }
  }
}

// OMNIBAR

.omnibar-container {
  width: 100%;
  .one-column-grid;
  position: relative;
  padding-top: 10px;
  .omnibar-x-icon {
    span {
      font-size: 18px;
    }
  }
  .omnibar-input {
    font-size: @large-font-size;
    max-height: @vertical-grid;
    &.omnibar-input-medium{
      font-size: @default-font-size;
    }
    &.omnibar-input-long{
      font-size: @small-font-size;
    }
    &.omnibar-input-very-long{
      font-size: @smallest-font-size;
    }
  }
  .omnibar-feature {
    width: 100%;
    float: left;
    overflow-y: auto;
    // height set with javascript
    .omnibar-search {
      height: 100%;
      .omnibar-empty-search-placeholder {
        height: 100%;
      }
      .filtered-items {
        padding-top: @vertical-grid-half;
      }
    }
  }
  .omnibar-footer {
    height: @footer-height;
    .omnibar-footer-button-left {
      float: left;
      padding: 15px 15px 15px 0px;
    }
    .omnibar-footer-button-right {
      float: right;
      padding: 15px 0px 15px 15px;
    }
    .button {

    }
  }
}

.omnibar-hidden .omnibar-container {
  margin-top: -@page-header-height;
}

.omnibar-animation.ng-enter, .omnibar-animation.ng-leave {
  position: absolute;
  left: 0;
  right: 0;
}

.omnibar-animation.ng-enter {
  -webkit-animation: .3s fade-in;
  -moz-animation: .3s fade-in;
  -o-animation: .3s fade-in;
  animation: .3s fade-in;
}

.omnibar-animation.ng-leave {
  -webkit-animation: .3s fade-out;
  -moz-animation: .3s fade-out;
  -o-animation: .3s fade-out;
  animation: .3s fade-out;
}

// MENU

#menu {
  background-color: @menu;
  position: absolute;
  width: 260px;
  height: 100%;
  overflow-y: auto;
  #menu-content {
    li.account-link {
      padding-top: 8px;
      height: @page-header-height;
    }
    a, span {
      font-size: @small-font-size;
      .font-bold;
    }
    a.feature-link, a.lists-link {
      font-size: 1.17em;  // http://www.w3.org/TR/CSS2/sample.html
    }
    li.last-feature { // padding-bottom for li with last a.feature-link
      padding-bottom: @vertical-grid;
    }
    ul {
      margin-top: 4px;
    }
    a {
      color: #FEFFFF;
      padding-right: 30px;
      padding-left: 30px;
    }
    a.active, a.lists-link.active + a.hide-expand-link {
      background-color: white;
      color: black;
    }
    a {
      // http://getbootstrap.com/components/#dropdowns
      display: block;
    }
    .list {
      display: table;
      line-height: @vertical-grid-half;
      height: @vertical-grid;
      .list-link {
        width: 100%;
        display: table-cell;
        vertical-align: middle;
        padding-left: 40px;
      }
    }
    .edit-lists-link {
      color: @default-element;
    }
    .lists-heading-container {
      display: table;
      .feature-link {
        display: table-cell;
        width: 90%;
      }
      a.hide-expand-link {
        vertical-align: middle;
        display: table-cell;
        width: 10%;
      }
    }
    .menu-last {
      padding-bottom: @vertical-grid-half;
    }
  }
}

// Override again with background color of the next element
// of the mobile menu
#feature-container-wrapper {
  position: relative;
  background-color: white;
}

// DATEPICKER

li.datepicker-date {
  line-height: @vertical-grid-half;
}

#datepicker {
  height: @vertical-grid + 6;
  margin-top: -16px;
  overflow: hidden;
  div#scroller {
    // http://stackoverflow.com/a/18784257
    // css divide width 100% to 3 column
    width: 300%;
    height: inherit;
    display: flex;
    display: -webkit-flex;
    display: -ms-flexbox;
    justify-content: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    nav[role=navigation].slide {
      height: inherit;
      flex: 1;
      -webkit-flex: 1;
      -ms-flex: 1;
      ul {
        // http://stackoverflow.com/a/14103766
        // How to stretch html / css horizontal navigation items evenly and fully across a specified container
        width: 100%;
        height: inherit;
        li {
          height: inherit;
          vertical-align: middle;
        }
        li#datepicker-arrow-previous {
          text-align: left;
        }
        li#datepicker-arrow-next {
          text-align: right;
        }
        li.datepicker-date {
          min-width: 11.11%;
          text-align: center;
          a {
            font-size: @small-font-size;
            width: inherit;
            color: @highlighted-element;
            span {
              display: block;
              min-width: 29px;
            }
            span.day-date {
              display: block;
              margin: 0 auto;
              height: 28px;
              width: 28px;
              text-align: center;
              padding-top: 4px;
            }
          }
          a.date-active, a.date-active-today {
            font-weight: 700;
            span.day-date {
              color: white;
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              background-color: @highlighted-element;
            }
          }
          a.date-past, a.date-active-past {
            color: @default-element;
          }
          a.date-active-past {
            span.day-date {
              color: white;
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              background-color: @default-element;
            }
          }
          a.date-today {
            span.day-date {
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              border: 1px solid @highlighted-element;
            }
          }
        }
      }
    }
  }
}

// FORMS

.inline-form-fields {
  padding-bottom: 10px;
}
/* ... */

